# Destroyerrrocket.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.sh  generatesecondprojects.sh  index.html  package-lock.json  serve.sh  startdioxusserver.sh  starttailwind.sh  tailwind.config.js
.cargo/: config.toml
assets/: sitemap.txt
assets/css/: tailwind.css
blogs/: info.json
docs/: 404.html  CNAME  about_me.html  blog.html  index.html  password_generator.html
docs/assets/: tailwind-5d7a4be1377c7b08.css  tailwind-8296f77fb78d955f.css  tailwind-963ccc9cc7ae76eb.css  top-8d6847f5c15fbbb0.avif  top-c62e9a74ff79f6bd.avif
docs/assets/blogs/2024-11-23/: index.html
docs/assets/css/: hamburgers-min.css  hamburgers.css  tailwind.css
docs/assets/dioxus/: personal-webpage.js  personal-webpage_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js
docs/assets/wasm/triangle-demo/: triangle_demo.js  triangle_demo_bg.wasm
docs/blog/2024/11/23/: index.html
docs/css/: tailwind.css
docs/wasm/: personal-webpage.d.ts  personal-webpage.js  personal-webpage_bg.wasm  personal-webpage_bg.wasm.d.ts  website.d.ts  website.js  website_bg.wasm  website_bg.wasm.d.ts
docs/wasm/snippets/dioxus-interpreter-js-53424282ea002554/: inline0.js
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js
src/: components.rs  main.rs  sections.rs
src/components/: form.rs  lets_connect.rs  skill_bars.rs  title_bar.rs
src/components/form/: input_text.rs  range.rs  read_only_input_text.rs
src/sections/: about_me.rs  blog.rs  hello_world.rs  password_generator.rs
src/tailwind/: input.css
src/utils/: clipboard.rs
triangle-demo/: Cargo.toml
triangle-demo/src/: lib.rs
website/: Cargo.toml  Dioxus.toml  build.rs  index.html  package-lock.json  tailwind.config.js
website/assets/blog/2024/11/23/: index.md
website/assets/css/: hamburgers-min.css  hamburgers.css  tailwind.css
website/blogs/2024-11-23/: index.md
website/src/: main.rs  sections.rs
website/src/components/: lets_connect.rs
website/src/components/form/: range.rs  select.rs
website/src/sections/: blog.rs  password_generator.rs
website/src/sections/blog/: entries.rs
website/src/utils/: clipboard.rs
