[package]
name = "personal-webpage"
version = "0.1.0"
authors = ["Pol Marcet Sardà <polmarcetsarda@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = ">=0.5", features = ["web", "router"] }
web-sys = { version = "0.3.72", features = ["Navigator", "Clipboard"] }
getrandom = { version = "^0.2", features = ["js"] }
rand = { version= "^0.8.5", features = [] }
enum-iterator = "2.1.0"
rand-utf8 = "0.0.1"

# Debug
dioxus-logger = ">=0.5.1"
manganis = ">=0.2.2"

#[unstable]
#build-std = ["std", "panic_abort", "core", "alloc"]
#build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none",
    "-Zfmt-debug=none"
]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
